Update render.yaml to include database migrations and static file collection in buildCommand

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: helnet
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install -r requirements.txt
+      python manage.py migrate
+      python manage.py collectstatic --noinput
     startCommand: gunicorn HELNET.wsgi:application
     envVars:
       - key: DATABASE_URL
