Refactor buildCommand in render.yaml to execute a shell script and add PYTHONUNBUFFERED environment variable

--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,7 @@ services:
   - type: web
     name: helnet
     env: python
-    buildCommand: |
-      pip install -r requirements.txt
-      python manage.py migrate
-      python manage.py collectstatic --noinput
+    buildCommand: chmod +x build.sh && ./build.sh
     startCommand: gunicorn HELNET.wsgi:application
     envVars:
       - key: DATABASE_URL
@@ -15,4 +12,6 @@ services:
       - key: DEBUG
         value: false
       - key: ALLOWED_HOSTS
-        value: .onrender.com 
+        value: .onrender.com
+      - key: PYTHONUNBUFFERED
+        value: "1" 
