--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: helnet
     env: python
-    buildCommand: chmod +x build.sh && ./build.sh
-    startCommand: gunicorn HELNET.wsgi:application
+    buildCommand: pip install -r requirements.txt
+    startCommand: python manage.py migrate && gunicorn HELNET.wsgi:application
     envVars:
       - key: DATABASE_URL
         value: postgresql://helnet_owner:npg_5OJcCE7khIvT@ep-aged-salad-a2t0peqj-pooler.eu-central-1.aws.neon.tech/helnet?sslmode=require
